Add test for torch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -51,6 +51,7 @@ requirements:
 test:
   imports:
     - sphericart
+    - sphericart.torch  # [cuda_compiler_version == "None"]
   commands:
     - pip check
   requires:
