--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,8 @@ source:
     sha256: 03aea0ab859a3356a36e2813cef51516d7e87c76ebc7cc68a00aaf8318c681d2
 
 build:
-  number: 1
+  number: 2
+  skip: true  # [cuda_compiler_version != "None" and ppc64le]
   skip: true  # [cuda_compiler_version == "11.8"]
   skip: true  # [win]
 
@@ -20,6 +21,7 @@ requirements:
     - {{ compiler("cxx") }}
     - {{ stdlib("c") }}
     - cmake
+    - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - libgomp      # [not osx]
     - llvm-openmp
     - make
@@ -27,7 +29,6 @@ requirements:
     - pip         # [build_platform != target_platform]
     - pybind11    # [build_platform != target_platform]
     - python      # [build_platform != target_platform]
-    - pytorch     # [build_platform != target_platform]
     - setuptools  # [build_platform != target_platform]
     {% if cuda_compiler_version != "None" %}
     - {{ compiler("cuda") }}
@@ -39,7 +40,6 @@ requirements:
     - llvm-openmp
     - pip
     - python
-    - pytorch
     - setuptools
     {% if cuda_compiler_version != "None" %}
     - {{ compiler("cuda") }}
@@ -49,7 +49,6 @@ requirements:
   run:
     - numpy
     - python
-    - pytorch
 
 test:
   imports:
@@ -63,12 +62,15 @@ outputs:
   - name: sphericart
   - name: sphericart-torch
     script: build_torch.sh  # [unix]
+    build:
+      skip: true  # [ppc64le]
     requirements:
       build:
         - {{ compiler("c") }}
         - {{ compiler("cxx") }}
         - {{ stdlib("c") }}
         - cmake
+        - cross-python_{{ target_platform }}  # [build_platform != target_platform]
         - libgomp      # [not osx]
         - llvm-openmp
         - make
