--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - {{ compiler("cxx") }}
     - {{ stdlib("c") }}
     - cmake
+    - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - libgomp      # [not osx]
     - llvm-openmp
     - make
@@ -69,6 +70,7 @@ outputs:
         - {{ compiler("cxx") }}
         - {{ stdlib("c") }}
         - cmake
+        - cross-python_{{ target_platform }}  # [build_platform != target_platform]
         - libgomp      # [not osx]
         - llvm-openmp
         - make
